src/test/ui/lifetimes/lifetime-errors/ex1b-return-no-names-if-else.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/ex1b-return-no-names-if-else.rs:1:29
   |
LL | fn foo(x: &i32, y: &i32) -> &i32 {
   |                             ^ expected named lifetime parameter
   |
help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `x` or `y`
  --> $DIR/ex1b-return-no-names-if-else.rs:1:11
   |
LL | fn foo(x: &i32, y: &i32) -> &i32 {
   |           ^^^^     ^^^^
help: consider introducing a named lifetime parameter
   |
LL | fn foo<'r>(x: &'r i32, y: &'r i32) -> &'r i32 {
   |       ^^^^    ^^^^^^^     ^^^^^^^     ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
